--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# Node/Python/otros
+node_modules/
+__pycache__/
+*.pyc
+*.env
+*.json
+*.sqlite3
+*.db
+*.key
+*.pem
+*.token
+*.zip
+*.exe
+.vscode/
